# SimCenterBootcamp2020

./: .gitignore  README.md
code/agave/: cloneParameters.json  cloneSubmit.json  fronteraSystem.json  stampedeSystem.json  submitMyClone.json  wrapper.sh
code/c/: argv.c  array1.c  array2.c  charset.c  file1.c  file2.c  file3.c  file4.c  file5.c  for.c  for1.c  for2.c  function1.c  function2.c  function3.c  function4.c  hello1.c  hello2.c  if1.c  if2.c  if3.c  linkedList.c  math1.c  memory1.c  memory2.c  memory3.c  memory4.c  memory5.c  myVector.c  myVector.h  node1.c  node2.c  oper1.c  oper2.c  oper3.c  pi.c  pi1.c  pi2.c  pointer1.c  pointerBad.c  (+13 more)
code/c++/: hello1.cpp  memory1.cpp  ref1.cpp  string1.cpp
code/c++/ExerciseDay3/ex1/: CMakeLists.txt  Circle.cpp  ColoredShape.cpp  Ellipse.cpp  Ellipse.h  Rectangle.cpp  Rectangle.h  main1.cpp  main4.cpp
code/c++/shape/: CMakeLists.txt  Circle.cpp  Circle.h  Makefile  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  main1.cpp  main2.cpp  main3.cpp
code/jupyter/: 00 Outline.ipynb  01.2 Solution of Exercise_Functions.ipynb  02 Matrix Data Types.ipynb  03.2 Solution of Exercise Plotting.ipynb  04 File handling.ipynb  06 Modules.ipynb  09 SQL Databases.ipynb  MyExcelFile.xlsx  myDataFile.txt
code/webScraping/: requestsDemo.py  seleniumDemo.py
docs/: .buildinfo  .special.html  assignments.html  genindex.html  git.html  index.html  objects.inv  search.html  searchindex.js  syllabus.html
docs/source/: GUI.html  (+36 more)
presentations/: SimCenter Bootcamp Python.pptx
sphynx/: Makefile  conf.py  index.rst
(+413 files in other folders)
